fix:codeql scan Security issue